# inzynierka

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  a.cpp~  a.h  cmake_install.cmake  drawFlow.h  drawFlow.h~  featuresDemo.h  featuresDemo.h~  loop.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  robotvision.cpp  robotvision.h  test3  test3.cpp  test3.cpp~  untitled.ui
src/: Source.cpp  Source.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  robotvision.cpp  robotvision.h
testt3/: testt3.pro  testt3.pro.user.2.5pre1  testt3.sln  testt3.vcxproj  testt3.vcxproj.filters
testt3-build-desktop-Qt_4_8_1_in_PATH__System__Release/: Makefile  moc_form.cpp  moc_mainwindow.cpp  testt3  ui_form.h  ui_mainwindow.h
testt3/GeneratedFiles/: ui_mainwindow.h
testt3/GeneratedFiles/Debug/: moc_mainwindow.cpp
testt3/Win32/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  testt3.lastbuildstate
testt3/Win32/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testt3.lastbuildstate
